--- a/locale/es/LC_MESSAGES/basic/graph_views.po
+++ b/locale/es/LC_MESSAGES/basic/graph_views.po
@@ -44,16 +44,18 @@ msgid "The graph requirements"
 msgstr "Requisitos del grafo"
 
 #: ../../build/docs/basic/graph_views.rst:26
+#, fuzzy
 msgid ""
 "In this chapter there are three graph requirements. It consists on three "
-"**fully connected** graphs: two for different types of vehicles and one "
-"for pedestrian, the source and the target in all of them are based on the"
-" ``source_osm`` and ``target_osm``."
+"graphs based on a **fully connected** graph derived from ways: two for "
+"different types of vehicles and one for pedestrian, the source and the "
+"target in all of them are based on the ``source_osm`` and ``target_osm``."
 msgstr ""
 "En este capítulo hay tres requisitos gráficos. Se trata de tres grafos "
-"derivados de un grafo **completamente conectado** extraido de ``ways``: dos "
-"para distintos tipos de vehículos y uno para peatones. En todos ellos, el "
-"origen y el destino se basan en el ``source_osm`` y el ``target_osm``."
+"derivados de un grafo **completamente conectado** extraido de ``ways``: "
+"dos para distintos tipos de vehículos y uno para peatones. En todos "
+"ellos, el origen y el destino se basan en el ``source_osm`` y el "
+"``target_osm``."
 
 #: ../../build/docs/basic/graph_views.rst:31
 msgid "The description of the graphs:"
@@ -215,12 +217,13 @@ msgid "Count the number of rows that need to be filled up."
 msgstr "Contar el número de filas que hay que rellenar."
 
 #: ../../build/docs/basic/graph_views.rst:145
+#, fuzzy
 msgid ""
-"Update the ``geom`` columns based on the ``sourse_osm`` column from "
+"Update the ``geom`` columns based on the ``source_osm`` column from "
 "``ways`` table."
 msgstr ""
-"Actualizar las columnas ``geom`` basándose en la columna ``source_osm`` de "
-"la tabla ``ways``."
+"Actualizar las columnas ``geom`` basándose en la columna ``source_osm`` "
+"de la tabla ``ways``."
 
 #: ../../build/docs/basic/graph_views.rst:147
 msgid "Use the start point of the geometry."
@@ -608,8 +611,11 @@ msgid "Exercise 8: Testing the views for routing"
 msgstr "Ejercicio 8: Comprobación de las vistas para el ruteo"
 
 #: ../../build/docs/basic/graph_views.rst:-1
-msgid "From the Venue to the hotel using the osm_id."
+#, fuzzy
+msgid "From the \"|ch7_place_1|\" to the \"|ch7_place_2|\""
 msgstr ""
+"Desde \"|ch7_place_1|\" hacia \"|ch7_place_2|\" usando el identificador "
+"OSM"
 
 #: ../../build/docs/basic/graph_views.rst:549
 msgid "Test the created views"
@@ -714,12 +720,13 @@ msgid "Similar as the previous one but with ``taxi_net``. (line **3**)"
 msgstr "Similar al anterior pero con ``taxi_net`` (línea **3**)"
 
 #: ../../build/docs/basic/graph_views.rst:597
+#, fuzzy
 msgid ""
 "The results give the same route as with ``vehicle_net`` but ``cost`` is "
-"lower"
+"higher"
 msgstr ""
-"Los resultados dan la misma ruta que con ``vehicle_net`` pero ``cost`` es "
-"mayor"
+"Los resultados dan la misma ruta que con ``vehicle_net`` pero ``cost`` es"
+" mayor"
 
 #: ../../build/docs/basic/graph_views.rst:609
 msgid "For ``walk_net``:"
@@ -732,3 +739,4 @@ msgstr "Similar al anterior pero con ``walk_net``. (línea **3**)"
 #: ../../build/docs/basic/graph_views.rst:612
 msgid "The results give a different route than of the vehicles."
 msgstr "Los resultados dan una ruta diferente a la de los vehículos."
+
