--- a/locale/es/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/es/LC_MESSAGES/basic/plpgsql_function.po
@@ -30,16 +30,18 @@ msgid "pl/pgsql function"
 msgstr "Función pl/pgsql"
 
 #: ../../build/docs/basic/plpgsql_function.rst:17
+#, fuzzy
 msgid ""
 "Other kind of functions are `pl/pgsql "
-"<https://www.postgresql.org/docs/current/plpgsql.html>`__.  As the "
+"<https://www.postgresql.org/docs/current/plpgsql.html>`__. As the "
 "applications requirements become more complex, using wrappers of "
 "previously defined functions becomes necessary for clarity."
 msgstr ""
-"Otro tipo de funciones son `pl/pgsql <https://www.postgresql.org/docs/"
-"current/plpgsql.html>`__. A medida que los requisitos de las aplicaciones se "
-"vuelven más complejos, el uso de contenedores de funciones previamente "
-"definidas se hace necesario para mayor claridad."
+"Otro tipo de funciones son `pl/pgsql "
+"<https://www.postgresql.org/docs/current/plpgsql.html>`__. A medida que "
+"los requisitos de las aplicaciones se vuelven más complejos, el uso de "
+"contenedores de funciones previamente definidas se hace necesario para "
+"mayor claridad."
 
 #: ../../build/docs/basic/plpgsql_function.rst:22
 msgid "Chapter contents"
@@ -66,8 +68,8 @@ msgid ""
 "Returns a route that includes a geometry so that if can be displayed, for"
 " example, in QGIS."
 msgstr ""
-"Devuelve una ruta que incluye una geometría para que si se puede desplegar, "
-"por ejemplo, en QGIS."
+"Devuelve una ruta que incluye una geometría para que si se puede "
+"desplegar, por ejemplo, en QGIS."
 
 #: ../../build/docs/basic/plpgsql_function.rst:32
 msgid "Will also return some other attributes."
@@ -306,7 +308,8 @@ msgid ""
 ":doc:`graph_views`) to get the ``x``, ``y``, ``geom`` information."
 msgstr ""
 "``JOIN`` la tabla de vértices con ``ways_vertices`` (creada en "
-":doc:`graph_views`) para obtener la información de ``x``, ``y``, ``geom``."
+":doc:`graph_views`) para obtener la información de ``x``, ``y``, "
+"``geom``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:95
 #: ../../build/docs/basic/plpgsql_function.rst:409
@@ -329,13 +332,14 @@ msgstr "Para ``walk_net``:"
 #: ../../build/docs/basic/plpgsql_function.rst:111
 msgid "Modify the above queries to create the ``walk_net_vertices`` table."
 msgstr ""
-"Modificar las consultas anteriores para crear la tabla ``walk_net_vertices``."
+"Modificar las consultas anteriores para crear la tabla "
+"``walk_net_vertices``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:119
 msgid "It is left to the reader to remove disconected components on the views."
 msgstr ""
-"Se deja al lector la tarea de eliminar los componentes desconectados en las "
-"vistas."
+"Se deja al lector la tarea de eliminar los componentes desconectados en "
+"las vistas."
 
 #: ../../build/docs/basic/plpgsql_function.rst:121
 msgid "See :doc:`graph_views`"
@@ -354,8 +358,8 @@ msgid ""
 "In particular use the following (lat, lon) value: ``(-1.455829, "
 "-48.446044)``."
 msgstr ""
-"En particular, utilizar el siguiente valor (lat,lon): ``(-1.455829, -48."
-"446044)``."
+"En particular, utilizar el siguiente valor (lat,lon): ``(-1.455829, "
+"-48.446044)``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:132
 #: ../../build/docs/basic/plpgsql_function.rst:264
@@ -387,8 +391,8 @@ msgid ""
 "Remember that the ``id`` has an OSM vertex identifier on the vertices "
 "tables."
 msgstr ""
-"Recordar que el ``id`` tiene un identificador de vértice OSM en las tablas "
-"de vértices."
+"Recordar que el ``id`` tiene un identificador de vértice OSM en las "
+"tablas de vértices."
 
 #: ../../build/docs/basic/plpgsql_function.rst:142
 msgid ""
@@ -396,14 +400,15 @@ msgid ""
 "<https://postgis.net/docs/geometry_distance_knn.html>`__ to order by "
 "distance."
 msgstr ""
-"Usando el operador de distancia `<-> <https://postgis.net/docs/"
-"geometry_distance_knn.html>`__ para ordenar por distancia."
+"Usando el operador de distancia `<-> "
+"<https://postgis.net/docs/geometry_distance_knn.html>`__ para ordenar por"
+" distancia."
 
 #: ../../build/docs/basic/plpgsql_function.rst:143
 msgid "Get only the first row, to obtain the nearest identifier of the vertex."
 msgstr ""
-"Obtenga solo la primera fila para obtener el identificador más cercano del "
-"vértice."
+"Obtenga solo la primera fila para obtener el identificador más cercano "
+"del vértice."
 
 #: ../../build/docs/basic/plpgsql_function.rst:145
 msgid "For ways_vertices:"
@@ -414,13 +419,6 @@ msgid "For ``vehicle_net_vertices``:"
 msgstr "Para``vehicle_net_vertices``:"
 
 #: ../../build/docs/basic/plpgsql_function.rst:158
-msgid "Modify the previous query"
-msgstr "Modificar la consulta anterior."
-
-#: ../../build/docs/basic/plpgsql_function.rst:171
-msgid "For ``taxi_net_vertices_pgr``:"
-msgstr "Para ``taxi_net_vertices_pgr``:"
-
 #: ../../build/docs/basic/plpgsql_function.rst:173
 #: ../../build/docs/basic/plpgsql_function.rst:181
 #: ../../build/docs/basic/plpgsql_function.rst:292
@@ -428,9 +426,15 @@ msgstr "Para ``taxi_net_vertices_pgr``:"
 msgid "Modify the previous query."
 msgstr "Modificar la consulta anterior."
 
+#: ../../build/docs/basic/plpgsql_function.rst:171
+#: ../../build/docs/basic/plpgsql_function.rst:303
+msgid "For ``taxi_net_vertices``:"
+msgstr "Para ``taxi_net_vertices``:"
+
 #: ../../build/docs/basic/plpgsql_function.rst:179
-msgid "For ``walk_net_vertices_pgr``:"
-msgstr "Para ``walk_net_vertices_pgr``:"
+#: ../../build/docs/basic/plpgsql_function.rst:311
+msgid "For ``walk_net_vertices``:"
+msgstr "Para ``walk_net_vertices``:"
 
 #: ../../build/docs/basic/plpgsql_function.rst:189
 msgid "Exercise 4: Nearest vertex function"
@@ -541,7 +545,8 @@ msgid "Nearest Vertex in vehicle network"
 msgstr "Nodo más cercano en la red vehicular"
 
 #: ../../build/docs/basic/plpgsql_function.rst:-1
-msgid "Nearest Vertex in taki network"
+#, fuzzy
+msgid "Nearest Vertex in taxi network"
 msgstr "Nodo más cercano en la red de taxis"
 
 #: ../../build/docs/basic/plpgsql_function.rst:-1
@@ -571,7 +576,8 @@ msgstr "Para ``ways_vertices``:"
 #: ../../build/docs/basic/plpgsql_function.rst:275
 msgid "Use the function with ``ways_vertices`` as the ``vertex_table`` parameter."
 msgstr ""
-"Utilizar la función con ``ways_vertices`` como parámetro de ``vertex_table``."
+"Utilizar la función con ``ways_vertices`` como parámetro de "
+"``vertex_table``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:276
 msgid "Pass the (lat,lon) values as second and third parameters."
@@ -593,14 +599,6 @@ msgstr "El valor almacenado en la columna ``id`` no es el identificador de OSM."
 msgid "For ``vehicles_net_vertices``:"
 msgstr "Para ``vehicles_net_vertices``:"
 
-#: ../../build/docs/basic/plpgsql_function.rst:303
-msgid "For ``taxi_net_vertices``:"
-msgstr "Para ``taxi_net_vertices``:"
-
-#: ../../build/docs/basic/plpgsql_function.rst:311
-msgid "For ``walk_net_vertices``:"
-msgstr "Para ``walk_net_vertices``:"
-
 #: ../../build/docs/basic/plpgsql_function.rst:319
 msgid "wrk_fromAtoB function"
 msgstr "función wrk_fromAtoB"
@@ -609,8 +607,7 @@ msgstr "función wrk_fromAtoB"
 msgid ""
 "In this section, creation and testing the required function will be "
 "tackled."
-msgstr ""
-"En esta sección, se abordará la creación y prueba de la función requerida."
+msgstr "En esta sección, se abordará la creación y prueba de la función requerida."
 
 #: ../../build/docs/basic/plpgsql_function.rst:325
 msgid "Exercise 6: Creating the main function"
@@ -643,12 +640,11 @@ msgid "Obtains the OSM identifier needed by ``wrk_dijkstra``."
 msgstr "Obtiene el identificador OSM necesario por ``wrk_dijkstra``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:338
-msgid ""
-"``wrk_dijkstra`` created on :ref:`basic/sql_function:Exercise 6: Function"
-" for an application`."
+#, fuzzy
+msgid "``wrk_dijkstra`` created in :doc:`sql_function`"
 msgstr ""
-"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Exercise 6: Función para "
-"una aplicación`."
+"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Exercise 6: Función "
+"para una aplicación`."
 
 #: ../../build/docs/basic/plpgsql_function.rst:342
 msgid "The function's signature:"
@@ -684,8 +680,7 @@ msgstr "El primer parámetro es la cadena que debe ser sustituida"
 
 #: ../../build/docs/basic/plpgsql_function.rst:363
 msgid "The rest are the data parameters, are the strings use for replacement."
-msgstr ""
-"El resto son los parámetros de datos, son las cadenas para la sustitución."
+msgstr "El resto son los parámetros de datos, son las cadenas para la sustitución."
 
 #: ../../build/docs/basic/plpgsql_function.rst:365
 msgid "``wrk_dijkstra`` obtains the values for the output"
@@ -704,18 +699,22 @@ msgid "``wrk_Nearest`` is used to find the identifier."
 msgstr "``wrk_Nearest`` se utiliza para encontrar el identificador."
 
 #: ../../build/docs/basic/plpgsql_function.rst:371
-msgid "The vertices table name is formed with ``%1$I_vertices_pgr``."
+#, fuzzy
+msgid "The vertices table name is formed with ``%1$I_vertices``."
 msgstr "El nombre de la tabla de vértices se forma con ``%1$I_vertices``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:373
 msgid "``lat1``, ``lon1`` values will replace ``%2$s, %3$s`` respectively."
 msgstr ""
-"Los valores ``lat1``, ``lon1`` sustituirán a ``%2$s, %3$s`` respectivamente."
+"Los valores ``lat1``, ``lon1`` sustituirán a ``%2$s, %3$s`` "
+"respectivamente."
 
 #: ../../build/docs/basic/plpgsql_function.rst:374
-msgid "``lat2``, ``lon2`` values will replace ``%2$s, %3$s`` respectively."
+#, fuzzy
+msgid "``lat2``, ``lon2`` values will replace ``%4$s, %5$s`` respectively."
 msgstr ""
-"Los valores ``lat2``, ``lon2`` sustituirán a ``%4$s, %5$s`` respectivamente."
+"Los valores ``lat2``, ``lon2`` sustituirán a ``%4$s, %5$s`` "
+"respectivamente."
 
 #: ../../build/docs/basic/plpgsql_function.rst:376
 msgid "To get the constructed query in form of a warning:"
@@ -793,3 +792,4 @@ msgstr ""
 #: ../../build/docs/basic/plpgsql_function.rst:445
 msgid "Do a dry run by adding ``true`` to get the query that is executed."
 msgstr "Agregar ``true`` para obtener la consulta que es ejecutuda."
+
