--- a/locale/es/LC_MESSAGES/basic/sql_function.po
+++ b/locale/es/LC_MESSAGES/basic/sql_function.po
@@ -63,35 +63,43 @@ msgid "A front end needs the following routing information:"
 msgstr "Una interfaz necesita la siguiente información de ruteo:"
 
 #: ../../build/docs/basic/sql_function.rst:33
-msgid "seq - A unique identifier of the rows"
+#, fuzzy
+msgid "``seq`` - A unique identifier of the rows"
 msgstr "seq - Un identificador único de las filas"
 
 #: ../../build/docs/basic/sql_function.rst:34
-msgid "id - The segment's identifier"
+#, fuzzy
+msgid "``id`` - The segment's identifier"
 msgstr "``id`` - El identificador del segmento"
 
 #: ../../build/docs/basic/sql_function.rst:35
-msgid "name - The segment's name"
+#, fuzzy
+msgid "``name`` - The segment's name"
 msgstr "name - El nombre del segmento"
 
 #: ../../build/docs/basic/sql_function.rst:36
-msgid "length - The segment's length"
+#, fuzzy
+msgid "``length`` - The segment's length"
 msgstr "length - La longitud del segmento"
 
 #: ../../build/docs/basic/sql_function.rst:37
-msgid "seconds - Number of seconds to traverse the segment"
+#, fuzzy
+msgid "``seconds`` - Number of seconds to traverse the segment"
 msgstr "seconds - Número de segundos para atravesar el segmento"
 
 #: ../../build/docs/basic/sql_function.rst:38
-msgid "azimuth - The azimuth of the segment"
+#, fuzzy
+msgid "``azimuth`` - The azimuth of the segment"
 msgstr "azimuth - El azimuth del segmento"
 
 #: ../../build/docs/basic/sql_function.rst:39
-msgid "route_geom - The routing geometry"
+#, fuzzy
+msgid "``route_geom`` - The routing geometry"
 msgstr "route_geom - La geometría del ruteo"
 
 #: ../../build/docs/basic/sql_function.rst:40
-msgid "route_readable - The geometry in human readable form."
+#, fuzzy
+msgid "``route_readable`` - The geometry in human readable form."
 msgstr "route_readable - La geometría en forma humanamente legible."
 
 #: ../../build/docs/basic/sql_function.rst:43
@@ -126,7 +134,8 @@ msgid "Description"
 msgstr "Descripción"
 
 #: ../../build/docs/basic/sql_function.rst:52
-msgid "edges_subset"
+#, fuzzy
+msgid "``edges_subset``"
 msgstr "edges_subset"
 
 #: ../../build/docs/basic/sql_function.rst:52
@@ -138,7 +147,8 @@ msgid "The table/view that is going to be used for processing"
 msgstr "La tabla/vista que se utilizará para procesar"
 
 #: ../../build/docs/basic/sql_function.rst:53
-msgid "source_osm"
+#, fuzzy
+msgid "``source_osm``"
 msgstr "source_osm"
 
 #: ../../build/docs/basic/sql_function.rst:53
@@ -152,7 +162,8 @@ msgid "The OSM identifier of the `departure` location."
 msgstr "El identificador OSM de la ubicación de la `salida`."
 
 #: ../../build/docs/basic/sql_function.rst:54
-msgid "target_osm"
+#, fuzzy
+msgid "``target_osm``"
 msgstr "target_osm"
 
 #: ../../build/docs/basic/sql_function.rst:54
@@ -164,7 +175,8 @@ msgid "output columns"
 msgstr "columnas de salida"
 
 #: ../../build/docs/basic/sql_function.rst:62
-msgid "seq"
+#: ../../build/docs/basic/sql_function.rst:94
+msgid "``seq``"
 msgstr "``seq``"
 
 #: ../../build/docs/basic/sql_function.rst:62
@@ -176,15 +188,17 @@ msgid "A unique number for each result row."
 msgstr "Un único número para cada fila de resultados."
 
 #: ../../build/docs/basic/sql_function.rst:63
-msgid "id"
-msgstr "id"
+#: ../../build/docs/basic/sql_function.rst:95
+msgid "``id``"
+msgstr "``id``"
 
 #: ../../build/docs/basic/sql_function.rst:63
 msgid "The edge identifier."
 msgstr "El identificador de arista."
 
 #: ../../build/docs/basic/sql_function.rst:64
-msgid "name"
+#: ../../build/docs/basic/sql_function.rst:96
+msgid "``name``"
 msgstr "``name``"
 
 #: ../../build/docs/basic/sql_function.rst:64
@@ -197,8 +211,9 @@ msgid "The name of the segment."
 msgstr "El nombre del segmento."
 
 #: ../../build/docs/basic/sql_function.rst:65
-msgid "seconds"
-msgstr "seconds"
+#: ../../build/docs/basic/sql_function.rst:97
+msgid "``seconds``"
+msgstr "``seconds``"
 
 #: ../../build/docs/basic/sql_function.rst:65
 #: ../../build/docs/basic/sql_function.rst:66
@@ -211,7 +226,8 @@ msgid "The number of seconds it takes to traverse the segment."
 msgstr "El número de segundos que se tarda en atravesar el segmento."
 
 #: ../../build/docs/basic/sql_function.rst:66
-msgid "azimuth"
+#, fuzzy
+msgid "``azimuth``"
 msgstr "``azimuth``"
 
 #: ../../build/docs/basic/sql_function.rst:66
@@ -219,7 +235,8 @@ msgid "The azimuth of the segment."
 msgstr "El azimuth del segmento."
 
 #: ../../build/docs/basic/sql_function.rst:67
-msgid "length"
+#: ../../build/docs/basic/sql_function.rst:98
+msgid "``length``"
 msgstr "``length``"
 
 #: ../../build/docs/basic/sql_function.rst:67
@@ -227,7 +244,8 @@ msgid "The leng in meters of the segment."
 msgstr "Longitud en metros del segmento."
 
 #: ../../build/docs/basic/sql_function.rst:68
-msgid "route_readable"
+#, fuzzy
+msgid "``route_readable``"
 msgstr "route_readable"
 
 #: ../../build/docs/basic/sql_function.rst:68
@@ -235,7 +253,8 @@ msgid "The geometry in human readable form."
 msgstr "La geometría en forma humanamente legible."
 
 #: ../../build/docs/basic/sql_function.rst:69
-msgid "route_geom"
+#, fuzzy
+msgid "``route_geom``"
 msgstr "``route_geom``"
 
 #: ../../build/docs/basic/sql_function.rst:69
@@ -251,8 +270,8 @@ msgid ""
 "For the following exercises only ``vehicle_net`` will be used, but you "
 "can test the queries with the other views."
 msgstr ""
-"Para los siguientes ejercicios sólo se utilizará ``vehicle_net``, pero usted "
-"puede probar las consultas con las otras vistas."
+"Para los siguientes ejercicios sólo se utilizará ``vehicle_net``, pero "
+"usted puede probar las consultas con las otras vistas."
 
 #: ../../build/docs/basic/sql_function.rst:77
 msgid "Additional information handling"
@@ -263,8 +282,8 @@ msgid ""
 "When the application needs additional information, like the name of the "
 "street, ``JOIN`` the results with other tables."
 msgstr ""
-"Cuando la aplicación necesita información adicional, como el nombre de la "
-"calle, ``JOIN`` los resultados con otras tablas."
+"Cuando la aplicación necesita información adicional, como el nombre de la"
+" calle, ``JOIN`` los resultados con otras tablas."
 
 #: ../../build/docs/basic/sql_function.rst:83
 msgid "Exercise 1: Get additional information"
@@ -292,26 +311,6 @@ msgstr "Desde |ch7_place_1| hasta |ch7_place_2|, utilizando identificadores OSM.
 msgid "Get the following information:"
 msgstr "Obtener la siguiente información:"
 
-#: ../../build/docs/basic/sql_function.rst:94
-msgid "``seq``"
-msgstr "``seq``"
-
-#: ../../build/docs/basic/sql_function.rst:95
-msgid "``id``"
-msgstr "``id``"
-
-#: ../../build/docs/basic/sql_function.rst:96
-msgid "``name``"
-msgstr "``name``"
-
-#: ../../build/docs/basic/sql_function.rst:97
-msgid "``seconds``"
-msgstr "``seconds``"
-
-#: ../../build/docs/basic/sql_function.rst:98
-msgid "``length``"
-msgstr "``length``"
-
 #: ../../build/docs/basic/sql_function.rst:101
 #: ../../build/docs/basic/sql_function.rst:150
 #: ../../build/docs/basic/sql_function.rst:196
@@ -331,8 +330,8 @@ msgid ""
 "Rename ``pgr_dijkstra`` results to application requirements names. (line "
 "**4**)."
 msgstr ""
-"Renombrar los resultados de ``pgr_dijkstra`` a los nombres de requeridos por "
-"la aplicación. (línea **4**)."
+"Renombrar los resultados de ``pgr_dijkstra`` a los nombres de requeridos "
+"por la aplicación. (línea **4**)."
 
 #: ../../build/docs/basic/sql_function.rst:104
 msgid ""
@@ -347,24 +346,25 @@ msgid ""
 "``LEFT`` to include the row with ``id = -1`` because it does not exist on"
 " ``vehicle_net``"
 msgstr ""
-"Tiene que ser ``LEFT`` porque hay una fila con ``id = -1`` que no existe en "
-"``vehicle_net``"
+"Tiene que ser ``LEFT`` porque hay una fila con ``id = -1`` que no existe "
+"en ``vehicle_net``"
 
 #: ../../build/docs/basic/sql_function.rst:122
 msgid "Geometry handling"
 msgstr "Manejo de geometría"
 
 #: ../../build/docs/basic/sql_function.rst:124
+#, fuzzy
 msgid ""
 "From pgRouting point of view, the geometry is part of the additional "
-"information, needed on the results for an application.  Therefore "
-"``JOIN`` the results with other tables that contain the geometry, but for"
-" further processing use PostGIS functions."
+"information, needed on the results for an application. Therefore ``JOIN``"
+" the results with other tables that contain the geometry and for further "
+"processing with PostGIS functions."
 msgstr ""
 "Desde el punto de vista de pgRouting, la geometría es parte de la "
-"información adicional, necesaria en los resultados para una aplicación. Por "
-"lo tanto ``JOIN`` los resultados con otras tablas que contienen la geometría "
-"y para su posterior con funciones de PostGIS."
+"información adicional, necesaria en los resultados para una aplicación. "
+"Por lo tanto ``JOIN`` los resultados con otras tablas que contienen la "
+"geometría y para su posterior con funciones de PostGIS."
 
 #: ../../build/docs/basic/sql_function.rst:130
 msgid "Exercise 2: Route geometry (human readable)"
@@ -406,8 +406,8 @@ msgid ""
 "The routing query named ``results`` in a WITH clause. (lines **2** to "
 "**5**)"
 msgstr ""
-"La consulta de ruteo llamada ``results`` en una cláusula WITH. (líneas **2** "
-"a **5**)"
+"La consulta de ruteo llamada ``results`` en una cláusula WITH. (líneas "
+"**2** a **5**)"
 
 #: ../../build/docs/basic/sql_function.rst:152
 msgid "The results from the previous exercise. (lines **8** and **9**)"
@@ -427,11 +427,12 @@ msgid ""
 "The ``geom`` processed with ``ST_AsText`` to get the human readable form."
 " (line **12**)"
 msgstr ""
-"La ``geom`` procesado con ``ST_AsText`` para obtener la forma legible por "
-"humanos. (línea **12**)"
+"La ``geom`` procesado con ``ST_AsText`` para obtener la forma legible por"
+" humanos. (línea **12**)"
 
 #: ../../build/docs/basic/sql_function.rst:160
-msgid "Renaming the result to  ``route_readable``"
+#, fuzzy
+msgid "Renaming the result to ``route_readable``"
 msgstr "Cambiando el nombre del resultado a ``route_readable``"
 
 #: ../../build/docs/basic/sql_function.rst:162
@@ -447,6 +448,7 @@ msgid "From |ch7_place_1| to |ch7_place_2| showing arrows."
 msgstr "Desde |ch7_place_1| al |ch7_place_2| mostrando flechas."
 
 #: ../../build/docs/basic/sql_function.rst:193
+#: ../../build/docs/basic/sql_function.rst:250
 msgid "``geom`` in binary format with the name ``route_geom``"
 msgstr "``geom`` en formato binario con el nombre ``route_geom``"
 
@@ -471,8 +473,8 @@ msgid ""
 "Visually, with the route displayed with arrows, it can be found that "
 "there are arrows that do not match the directionality of the route."
 msgstr ""
-"Visualmente, con la ruta mostrada con flechas, se puede ver que hay flechas "
-"que no coinciden con la direccionalidad de la ruta."
+"Visualmente, con la ruta mostrada con flechas, se puede ver que hay "
+"flechas que no coinciden con la direccionalidad de la ruta."
 
 #: ../../build/docs/basic/sql_function.rst:225
 msgid ""
@@ -487,8 +489,8 @@ msgid ""
 "Inspecting the detail of the results of `Exercise 2: Route geometry "
 "(human readable)`_"
 msgstr ""
-"Inspeccionando el detalle de los resultados de `Ejercicio 2: Geometría de la "
-"ruta (legible para humanos)`_"
+"Inspeccionando el detalle de los resultados de `Ejercicio 2: Geometría de"
+" la ruta (legible para humanos)`_"
 
 #: ../../build/docs/basic/sql_function.rst:231
 msgid "Rows **59** to **61** do not match that criteria"
@@ -496,16 +498,12 @@ msgstr "Las filas **59** a **61** no coinciden con ese criterio"
 
 #: ../../build/docs/basic/sql_function.rst:247
 msgid "Fix the directionality of the geometries of the previous exercise"
-msgstr ""
-"Para arreglar la direccionalidad de las geometrías del ejercicio anterior"
+msgstr "Para arreglar la direccionalidad de las geometrías del ejercicio anterior"
 
 #: ../../build/docs/basic/sql_function.rst:249
-msgid "``geom`` in human readable form named as  ``route_readable``"
+#, fuzzy
+msgid "``geom`` in human readable form named as ``route_readable``"
 msgstr "``geom`` en forma legible por humanos nombrado como ``route_readable``"
-
-#: ../../build/docs/basic/sql_function.rst:250
-msgid "``geom`` in binary format  with the name ``route_geom``"
-msgstr "``geom`` en formato binario con el nombre ``route_geom``"
 
 #: ../../build/docs/basic/sql_function.rst:251
 msgid "Both columns must have the geometry fixed for directionality."
@@ -604,8 +602,8 @@ msgid ""
 "Move the query that gets the additional information into the ``WITH`` "
 "statement."
 msgstr ""
-"Mover la consulta que obtiene la información adicional dentro la cláusula "
-"``WITH``."
+"Mover la consulta que obtiene la información adicional dentro la cláusula"
+" ``WITH``."
 
 #: ../../build/docs/basic/sql_function.rst:319
 msgid "Name it ``additional``. (line **6**)"
@@ -682,7 +680,8 @@ msgid ""
 "The result should meet the requirements indicated at the beginning of the"
 " chapter"
 msgstr ""
-"El resultado debe cumplir los requisitos indicados al principio del capítulo"
+"El resultado debe cumplir los requisitos indicados al principio del "
+"capítulo"
 
 #: ../../build/docs/basic/sql_function.rst:367
 msgid "The signature of the function:"
@@ -785,3 +784,4 @@ msgstr "|osmid_4| |place_4|"
 #: ../../build/docs/basic/sql_function.rst:451
 msgid "|osmid_5| |place_5|"
 msgstr "|osmid_5| |place_5|"
+
