--- a/locale/es/LC_MESSAGES/general-intro/osgeolive.po
+++ b/locale/es/LC_MESSAGES/general-intro/osgeolive.po
@@ -1,12 +1,12 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2010-2023 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Prizren package.
+# Belem package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-09-22 04:16+0000\n"
 "PO-Revision-Date: 2024-03-22 16:47+0000\n"
