--- a/locale/ja/LC_MESSAGES/index.po
+++ b/locale/ja/LC_MESSAGES/index.po
@@ -9,7 +9,7 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: 2024-11-10 15:48+0000\n"
