--- a/locale/es/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/es/LC_MESSAGES/advanced/chapter-12.po
@@ -8,7 +8,7 @@
 # Vicky Vergara <vicky@georepublic.de>, 2022
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 09:41-0600\n"
 "PO-Revision-Date: 2024-03-19 05:57+0000\n"
