--- a/locale/es/LC_MESSAGES/appendix/appendix-2.po
+++ b/locale/es/LC_MESSAGES/appendix/appendix-2.po
@@ -9,7 +9,7 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
 "PO-Revision-Date: 2024-03-19 05:57+0000\n"
