--- a/locale/es/LC_MESSAGES/interactions/chapter-10.po
+++ b/locale/es/LC_MESSAGES/interactions/chapter-10.po
@@ -9,7 +9,7 @@
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-04 20:27-0600\n"
 "PO-Revision-Date: 2024-11-10 17:27+0000\n"
