--- a/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
@@ -9,7 +9,7 @@
 # Vicky Vergara <vicky@georepublic.de>, 2022
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 11:04-0600\n"
 "PO-Revision-Date: 2024-11-10 17:14+0000\n"
