--- a/locale/ja/LC_MESSAGES/appendix/appendix-3.po
+++ b/locale/ja/LC_MESSAGES/appendix/appendix-3.po
@@ -10,7 +10,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
