--- a/locale/ja/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/ja/LC_MESSAGES/general-intro/introduction.po
@@ -10,7 +10,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
