(locale) fixing spanish typos

--- a/locale/es/LC_MESSAGES/basic/data.po
+++ b/locale/es/LC_MESSAGES/basic/data.po
@@ -174,10 +174,10 @@ msgid ""
 "with pgRouting. Additional information about ``osm2pgrouting`` can be "
 "found at the :doc:`../appendix/appendix-3`"
 msgstr ""
-"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es una "
+"El siguiente paso es ejecutar el convertidor ``osm2pgrouting`` que es una "
 "herramienta de línea de comandos que inserta los datos en la base de datos, "
 "\"listo\" para ser utilizado con pgRouting. Puede encontrar información "
-"adicional sobre ``osm2pgrouting :doc:`../appendix/appendix-3`"
+"adicional sobre ``osm2pgrouting`` :doc:`../appendix/appendix-3`"
 
 #: ../../build/docs/basic/data.rst:112
 msgid "For this step:"
