(locale) fixing swidish typos

--- a/locale/sv/LC_MESSAGES/basic/graph_views.po
+++ b/locale/sv/LC_MESSAGES/basic/graph_views.po
@@ -516,7 +516,7 @@ msgstr "`the_geom` Geometrin."
 
 #: ../../build/docs/basic/graph_views.rst:502
 msgid "Similar to `Exercise 5: Creating a view for routing`_:"
-msgstr "Liknar \"Övning 5: Skapa en vy för routing\":"
+msgstr "Liknar `Övning 5: Skapa en vy för routing`_:"
 
 #: ../../build/docs/basic/graph_views.rst:504
 msgid "The ``cost`` and ``reverse_cost`` are in terms of seconds with speed of ``2 mts/sec``. (line **7**)"
