--- a/locale/sv/LC_MESSAGES/basic/pedestrian.po
+++ b/locale/sv/LC_MESSAGES/basic/pedestrian.po
@@ -147,7 +147,7 @@ msgstr "|osmid_5| |place_5| (|id_5|)"
 msgid "The corresponding :code:`id` are shown in the following image, and a sample route from \"|place_3|\" to \"|place_5|\"."
 msgstr ""
 "Motsvarande :code:`id` visas i följande bild, och ett exempel på en rutt "
-"från \"|plats_3|\" till \"|plats_5|\"."
+"från \"|place_3|\" till \"|place_5|\"."
 
 #: ../../build/docs/basic/pedestrian.rst:105
 msgid "Exercise 1: Single pedestrian routing"
@@ -361,7 +361,7 @@ msgstr "Övning 5: Kombination av rutter"
 
 #: ../../build/docs/basic/pedestrian.rst:251
 msgid "First pedestrian goes from \"|place_1|\" to \"|place_4|\""
-msgstr "Den första fotgängaren går från \"|plats_1|\" till \"|plats_4|\""
+msgstr "Den första fotgängaren går från \"|place_1|\" till \"|place_4|\""
 
 #: ../../build/docs/basic/pedestrian.rst:252
 msgid "Second pedestrian goes from \"|place_2|\" to \"|place_5|\""
@@ -431,7 +431,7 @@ msgstr "Resultat som aggregerade kostnader."
 msgid "Compare with `Exercise 4: Many Pedestrians going to different destinations`_ 's note."
 msgstr ""
 "Jämför med `Exercise 4: Many Pedestrians going to different "
-"destinations`-anteckning."
+"destinations`_-anteckning."
 
 #: ../../build/docs/basic/pedestrian.rst:335
 msgid "Exercise 7: Many Pedestrians going to different destinations summarizing the total costs per departure"
