--- a/locale/sv/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/sv/LC_MESSAGES/basic/plpgsql_function.po
@@ -369,8 +369,8 @@ msgstr ""
 #: ../../build/docs/basic/plpgsql_function.rst:143
 msgid "Using the Postgis distance operator `<-> <https://postgis.net/docs/geometry_distance_knn.html>`__ to order by distance."
 msgstr ""
-"Använd Postgis distansoperator `<-> &lt;https://postgis.net/docs/"
-"geometry_distance_knn.html&gt;`__ för att beställa efter avstånd."
+"Använd Postgis distansoperator `<-> <https://postgis.net/docs/"
+"geometry_distance_knn.html>`__ för att beställa efter avstånd."
 
 #: ../../build/docs/basic/plpgsql_function.rst:144
 msgid "Get only the first row, to obtain the nearest identifier of the vertex."
@@ -567,7 +567,7 @@ msgstr "Skapa funktionen ``wrk_fromAtoB``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:331
 msgid "Follow the description given at `Requirements for routing from A to B`_."
-msgstr "Följ beskrivningen i avsnittet \"Krav på rutten från A till B\"."
+msgstr "Följ beskrivningen i avsnittet `Krav på rutten från A till B`_."
 
 #: ../../build/docs/basic/plpgsql_function.rst:332
 msgid "Use specialized functions:"
