--- a/locale/sv/LC_MESSAGES/basic/vehicle.po
+++ b/locale/sv/LC_MESSAGES/basic/vehicle.po
@@ -325,7 +325,7 @@ msgstr "Från \"|place_3|\" till \"|place_1|\""
 #: ../../build/docs/basic/vehicle.rst:249
 #: ../../build/docs/basic/vehicle.rst:313
 msgid "From |place_3| to |place_1|"
-msgstr "Från |place_3 till |place_1"
+msgstr "Från |place_3| till |place_1|"
 
 #: ../../build/docs/basic/vehicle.rst:256
 msgid "Add a penalty column"
