--- a/locale/sv/LC_MESSAGES/interactions/chapter-9.po
+++ b/locale/sv/LC_MESSAGES/interactions/chapter-9.po
@@ -162,7 +162,7 @@ msgstr ":menuselection:`Högerklicka --> Egenskaper`"
 
 #: ../../build/docs/interactions/chapter-9.rst:108
 msgid ":menuselection:`Style --> Color`"
-msgstr ":menyval:`Stil --> Färg`"
+msgstr ":menuselection:`Stil --> Färg`"
 
 #: ../../build/docs/interactions/chapter-9.rst:113
 msgid ":menuselection:`Style --> + --> Symbol Layer Type --> Marker line`"
@@ -179,7 +179,7 @@ msgstr "Kopiera/klistra in format"
 #: ../../build/docs/interactions/chapter-9.rst:123
 msgid "Choose a formmated layer and :menuselection:`Right click --> Styles --> Copy Styles`"
 msgstr ""
-"Välj ett förminskat lager och :menyval:`Högerklicka --> Stilar --> Kopiera "
+"Välj ett förminskat lager och :menuselection:`Högerklicka --> Stilar --> Kopiera "
 "stilar`"
 
 #: ../../build/docs/interactions/chapter-9.rst:128
