--- a/locale/es/LC_MESSAGES/appendix/appendix-2.po
+++ b/locale/es/LC_MESSAGES/appendix/appendix-2.po
@@ -5,7 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
 # Translators:
-# Vicky Vergara <vicky@georepublic.de>, 2022
+# Vicky Vergara <vicky@erosion.dev>, 2022
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
