--- a/locale/es/LC_MESSAGES/basic/vehicle.po
+++ b/locale/es/LC_MESSAGES/basic/vehicle.po
@@ -7,7 +7,7 @@
 # Translators:
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
-# Vicky Vergara <vicky@georepublic.de>, 2022
+# Vicky Vergara <vicky@erosion.dev>, 2022
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
