--- a/locale/es/LC_MESSAGES/index.po
+++ b/locale/es/LC_MESSAGES/index.po
@@ -6,7 +6,7 @@
 #
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
-# Vicky Vergara <vicky@georepublic.de>, 2022
+# Vicky Vergara <vicky@erosion.dev>, 2022
 #
 msgid ""
 msgstr ""
