--- a/locale/es/LC_MESSAGES/interactions/chapter-10.po
+++ b/locale/es/LC_MESSAGES/interactions/chapter-10.po
@@ -5,7 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
 # Translators:
-# Vicky Vergara <vicky@georepublic.de>, 2021
+# Vicky Vergara <vicky@erosion.dev>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 msgid ""
 msgstr ""
