Updating translator email (nagase)

--- a/locale/ja/LC_MESSAGES/general-intro/osgeolive.po
+++ b/locale/ja/LC_MESSAGES/general-intro/osgeolive.po
@@ -5,7 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 # Translators:
-# Ko Nagase <nagase@georepublic.co.jp>, 2021
+# Ko Nagase <geosanak@gmail.com>, 2021
 # Jin Igarashi <wushilan0623@gmail.com>, 2022
 #, fuzzy
 msgid ""
