--- a/locale/ja/LC_MESSAGES/interactions/chapter-11.po
+++ b/locale/ja/LC_MESSAGES/interactions/chapter-11.po
@@ -5,7 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 # Translators:
-# Ko Nagase <nagase@georepublic.co.jp>, 2021
+# Ko Nagase <geosanak@gmail.com>, 2021
 #, fuzzy
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Ko Nagase <nagase@georepublic.co.jp>, 2021\n"
+"Last-Translator: Ko Nagase <geosanak@gmail.com>, 2021\n"
 "Language: ja\n"
 "Language-Team: Japanese "
 "(https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
