--- a/locale/ja/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/ja/LC_MESSAGES/general-intro/introduction.po
@@ -5,7 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 # Translators:
-# Ko Nagase <nagase@georepublic.co.jp>, 2021
+# Ko Nagase <geosanak@gmail.com>, 2021
 # Taro Matsuzawa <taro@georepublic.co.jp>, 2021
 #, fuzzy
 msgid ""
