Updating translator email (taro)

--- a/locale/ja/LC_MESSAGES/appendix/appendix-2.po
+++ b/locale/ja/LC_MESSAGES/appendix/appendix-2.po
@@ -6,7 +6,7 @@
 #
 # Translators:
 # Ko Nagase <geosanak@gmail.com>, 2022
-# Taro Matsuzawa <taro@georepublic.co.jp>, 2022
+# Taro Matsuzawa <btm@tech.email.ne.jp>, 2022
 # Daniel Kastl, 2022
 #, fuzzy
 msgid ""
