--- a/locale/ja/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/ja/LC_MESSAGES/advanced/chapter-12.po
@@ -6,7 +6,7 @@
 #
 # Translators:
 # Ko Nagase <geosanak@gmail.com>, 2022
-# Taro Matsuzawa <taro@georepublic.co.jp>, 2022
+# Taro Matsuzawa <btm@tech.email.ne.jp>, 2022
 #, fuzzy
 msgid ""
 msgstr ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-16 17:44+0000\n"
 "PO-Revision-Date: 2022-03-01 19:42+0000\n"
-"Last-Translator: Taro Matsuzawa <taro@georepublic.co.jp>, 2022\n"
+"Last-Translator: Taro Matsuzawa <btm@tech.email.ne.jp>, 2022\n"
 "Language: ja\n"
 "Language-Team: Japanese "
 "(https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
